test/scc/decl/semantic-errors/054.a
054.t:1:21: error: invalid storage class for parameter 'a'